<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_depthanything</name>
  <version>0.0.0</version>
  <description>A ROS2 wrapper for DepthAnythingV2</description>
  <maintainer email="thomasluk624@gmail.com">thomasluk</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python Dependencies -->
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-torch</depend>
  <depend>python3-open3d</depend>
  <depend>python3-pillow</depend>
  <depend>python3-transformers</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>